# ramen-bot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
config/: config.toml
src/: app.cpp
src/common/: common_def.h  macro.h
src/core/: bot.cpp  bot.h
src/data/: double_buffer.h  resource_context.cpp  resource_context.h
src/middleware/: base.h  guard.cpp  guard.h  manager.cpp  manager.h  marco.h  parse.h
src/model/: config.h  event.h  message.h  variant.hpp
src/plugins/: base.h  tp.h
src/type/: enum.h
src/util/: bot_util.h  double_buffer.h  factory.h  interval_looper.h  loop_task.h  randint.h  thread_pool.cpp  thread_pool.h  timed_task.cpp  timed_task.h  type_traits.h
